--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: 关于
+title: 关于钟典
 header: about me
 group: navigation
 index: 4
@@ -8,46 +8,34 @@ index: 4
 {% include pengx/setup %}
 <div>
   <h2>
-    About
+    一句话梗概
   </h2>
   <p class="about">
-    在魔法道路上渐行渐远的资深魔导师
+    中国人民大学本科僧一枚，与校园环境格格不入的理工男，互联网上一张嘴，轻量级开发者
   </p>
   <h2>
-    Copyright
+    版权声明
   </h2>
   <p class="about">
-    本博客所有内容均为原创，转载请遵守
+    本技术博客未特别标明之内容均为原创，转载请遵守
     <a href="http://creativecommons.org/licenses/by-sa/3.0/deed.zh">CC BY-SA 3.0协议</a>。
   </p>
   <h2>
-    Profile
+    个人资料
   </h2>
   <table class="table table-striped" id="about-me">
     <tbody>
       <tr>
         <td class="col-md-3"><i class="fa fa-github-square"> </i><span>GitHub</span></td>
-        <td><a href="{{ site.author.github }}">pengx17</a></td>
+        <td><a href="{{ site.author.github }}">钟典</a></td>
       </tr>
       <tr>
-        <td class="col-md-3"><i class="fa fa-weibo"></i> <span>新浪微博</span></td>
-        <td><a href="{{ site.author.weibo }}">hixp</a> </td>
-      </tr>
-      <tr>
-        <td class="col-md-3"><i class="fa fa-envelope"></i> <span>Em@il</span></td>
-        <td><a href="mailto:{{ site.author.email }}">{{ site.author.email }}</a> </td>
-      </tr>
-      <tr>
-        <td class="col-md-3"><i class="fa fa-linkedin-square"></i> <span>LinkedIn</span></td>
-        <td><a href="{{ site.author.linkedin }}">Peng Xiao</a> </td>
+        <td class="col-md-3"><i class="fa fa-envelope"></i> <span>Email</span></td>
+        <td><a href="mailto:code@myaiol.com">code@myaiol.com</a> </td>
       </tr>
       <tr>
         <td class="col-md-3"><i class="fa fa-comments-o"></i> <span>腾讯QQ</span></td>
-        <td> {{ site.author.qq }} </td>
-      </tr>
-      <tr>
-        <td class="col-md-3"><i class="fa fa-tumblr-square"></i> <span>Tumblr</span></td>
-        <td> <a href="http://pengx17.tumblr.com/">Journey</a> </td>
+        <td>请向博主索要QQ</td>
       </tr>
     </tbody>
   </table>
@@ -59,13 +47,7 @@ index: 4
 	原主题作者 <a href="http://codepiano.github.io/about.html">[codepiano]</a>
   </p>
   <p class="about">
-    由<a href="http://pages.github.com/">GitHub Pages</a>和<a href="http://jekyllrb.com/">Jekyll</a>驱动
-  </p>
-  <h2>
-    Friends!
-  </h2>
-  <p class="about">
-	<a href="http://plutoless-studio.co.uk/">plutoless-studio</a>，文艺到不知道想表达什么
+    由<a href="http://pages.github.com/">GitHub Pages</a>和<a href="http://jekyllrb.com/">Jekyll</a>底层支持
   </p>
 </div>
 <hr />
