--- a/about.html
+++ b/about.html
@@ -39,12 +39,11 @@ index: 4
       </tr>
     </tbody>
   </table>
-  </br>
   <h2>
-    Credits
+    特别鸣谢
   </h2>
   <p class="about">
-	原主题作者 <a href="http://codepiano.github.io/about.html">[codepiano]</a>
+	该jekyll主题的原作者 <a href="http://codepiano.github.io/about.html">[codepiano]</a>
   </p>
   <p class="about">
     由<a href="http://pages.github.com/">GitHub Pages</a>和<a href="http://jekyllrb.com/">Jekyll</a>底层支持
